--- a/Bulk UFV Downloader/Bulk UFV Downloader.csproj
+++ b/Bulk UFV Downloader/Bulk UFV Downloader.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="WinSCP" Version="5.15.9" />
+    <PackageReference Include="Xabe.FFmpeg" Version="3.5.0" />
   </ItemGroup>
 
   <ItemGroup>
