--- a/Bulk UFV Downloader/Bulk UFV Downloader.csproj
+++ b/Bulk UFV Downloader/Bulk UFV Downloader.csproj
@@ -15,6 +15,9 @@
     <None Update="ffmpeg.exe">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="ffprobe.exe">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
